--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,16 @@
-.App {
+.search-block {
   display: flex;
   align-items: center;
   margin: 20px auto;
   justify-content: center;
+  margin-bottom: 20px;
+}
+
+.result-block {
+  max-width: 920px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .btn {
